--- a/webapi/Dockerfile
+++ b/webapi/Dockerfile
@@ -1,20 +1,20 @@
-# Build stage
+# ─── Build Stage ─────────────────────────────────────────────────────────────
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
-# 1. Copy only the project file and restore
+# 1. Copy just the project file, restore dependencies
 COPY *.csproj ./
-RUN dotnet restore webapi.csproj
+RUN dotnet restore
 
-# 2. Copy the rest of the source and publish
+# 2. Copy all source files & publish
 COPY . ./
-RUN dotnet publish webapi.csproj -c Release -o /app/publish
+RUN dotnet publish -c Release -o /app/publish
 
-# Runtime stage
+# ─── Runtime Stage ───────────────────────────────────────────────────────────
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 
-# 3. Grab the published output
+# 3. Copy published output into final image
 COPY --from=build /app/publish .
 
 EXPOSE 80
