--- a/webapi/Dockerfile
+++ b/webapi/Dockerfile
@@ -18,4 +18,4 @@ WORKDIR /app
 COPY --from=build /app/publish .
 
 EXPOSE 80
-ENTRYPOINT ["dotnet", "webapi.dll"]
+ENTRYPOINT ["dotnet", "robot.dll"]
