--- a/reactapp/tsconfig.json
+++ b/reactapp/tsconfig.json
@@ -18,11 +18,11 @@
     "checkJs": false,
 
     /* Linting */
-    "strict": true,
-    "noImplicitAny":  true,
+    "strict": false,
+    "noImplicitAny":  false,
     "noImplicitThis": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
 
