--- a/webapi/Dockerfile
+++ b/webapi/Dockerfile
@@ -2,26 +2,24 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
-# 1. Copy project file and restore dependencies
+# 1. Copy project file + restore
 COPY webapi.csproj ./
 RUN dotnet restore
 
-# 2. Copy all source files and publish the app
+# 2. Copy source + publish
 COPY . ./
 RUN dotnet publish -c Release -o /app/publish
 
 # ─── Runtime Stage ───────────────────────────────────────────────────────────
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
+FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 
-# 3. Copy the published output
+# 3. Copy published output
 COPY --from=build /app/publish .
 
-# 4. Copy the SQLite database into Render’s persistent volume
-#    Adjust the source path if your .db lives elsewhere in the repo
+# 4. Copy BOTH of your SQLite files into Render’s data folder
 COPY --from=build /src/Data/databases/algespace.db /opt/render/data/algespace.db
+COPY --from=build /src/Data/databases/studies.db   /opt/render/data/studies.db
 
 EXPOSE 80
-
-# 5. Launch the application
 ENTRYPOINT ["dotnet", "webapi.dll"]
